--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,12 @@ dependencies:
   rounded_floating_app_bar: ^0.1.0
   bubble: ^1.2.1
   flutter_speed_dial: ^4.3.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_auth: ^3.1.1
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.3
+  random_string: ^2.3.1
+
 
 dev_dependencies:
   flutter_test:
